--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,18 +103,20 @@
 }
 
 @media screen and ( max-width: 767px ) {
+	.issi-wrap {
+		align-items: center;
+	}
+
 	.issi-slider {
 		max-width: 95%;
 	}
 
 	.issi-slider .slick-content {
 		padding: 0 20px;
-		height: 650px;
-    flex-wrap: nowrap;
+		height: 600px;
 	}
 
 	.issi-slider .slick-content h2 {
 		font-size: 1.5em;
 	}
-
 }
