--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@
 
 @media screen and ( max-width: 767px ) {
 	.issi-wrap {
-		align-items: center;
+		align-items: flex-start;
 	}
 
 	.issi-slider {
