--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,8 +114,12 @@
 	.issi-slider .slick-content {
 		padding: 0 20px;
 		height: 400px;
+		flex-wrap: nowrap;
 	}
 
+	.issi-slider .slick-content p {
+		font-size: .8em;
+	}
 	.issi-slider .slick-content h2 {
 		font-size: 1.5em;
 	}
