--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@
 .issi-slider .slick-content h2 {
 	font-family: "Carnivalee Freakshow";
 	font-size: 3em;
-	margin: .5em;
+	margin: .5em 0;
 	text-align: center;
 	letter-spacing: 2px;
 }
