--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@
 	width: 100%;
 	height: 100%;
 	opacity: 1;
-	background-image: url("../images/bg-issi.jpeg");
+	background-image: url("../images/bg-issi.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
